added average math and reading scores by grade.

--- a/function.ipynb
+++ b/function.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "372b58d8",
+   "id": "00f3f5aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "95361cbb",
+   "id": "5978690d",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "23ba76a4",
+   "id": "d3dcdeeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "32567fe3",
+   "id": "2ff16156",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "196784d5",
+   "id": "f2f05592",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "38c4bc4e",
+   "id": "c15d7d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d56d0b3d",
+   "id": "7f0d80b2",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b5a211e2",
+   "id": "bbcb2c9d",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "734042d8",
+   "id": "49e5366b",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "37c8bdd6",
+   "id": "7f428ee5",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d55f30bc",
+   "id": "4f32a046",
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +227,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "e725b7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "236f3dd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felix\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_cat = Cat('Felix')\n",
+    "print(first_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9acc4b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Garfield\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_cat = Cat('Garfield')\n",
+    "print(second_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b59ac8ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "\n",
+    "    def bark(self):\n",
+    "        return self.sound + ' ' + self.sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "26538043",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido\n",
+      "brown\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'woof! woof!'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_dog = Dog('Fido', 'brown', 'woof!')\n",
+    "print(    first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0e358f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'arf! arf!'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "second_dog = Dog('Lady', 'blonde', 'arf!')\n",
+    "second_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "01cd0843",
+   "id": "a4f25dbc",
    "metadata": {},
    "outputs": [],
    "source": []
